DONE : mainPage view (map + header + sideBar) TODO : fetch API

--- a/src/sass/variable.scss
+++ b/src/sass/variable.scss
@@ -1,3 +1,17 @@
+$color__main: #00a8c0;
+$color__main--light80: #00a8c0cc;
+$color__main--light60: #00a8c099;
+$color__main--light10: #00a8c01a;
+$color__main--dark10: #009bb1;
+
+$color__2nd: #d9ef08;
+$color__2nd--light80: #d9ef08cc;
+$color__2nd--light60: #d9ef0899;
+$color__2nd--light20: #d9ef0833;
+$color__2nd--dark20: #c8dc07;
+
+$color--wite: #ffffff;
+
 $rwd-largest: 1500px;
 $rwd-large: 1200px;
 $rwd-medium: 900px;
