--- a/src/components/btn/btn.scss
+++ b/src/components/btn/btn.scss
@@ -8,47 +8,78 @@
 
   text-align: center;
   /* 白色 */
-  background: linear-gradient(180deg, rgba(239, 239, 239, 0) 0%, rgba(206, 206, 206, 0.2) 100%), #ffffff;
+  background: linear-gradient(
+      180deg,
+      rgba(239, 239, 239, 0) 0%,
+      rgba(206, 206, 206, 0.2) 100%
+    ),
+    #ffffff;
 
   /* 白btn */
-  box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.25), inset 0px -1px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.25),
+    inset 0px -1px 4px rgba(0, 0, 0, 0.3);
   border-radius: 40px;
 
   &:active,
   &:hover {
-    background: linear-gradient(180deg, rgba(239, 239, 239, 0) 0%, rgba(206, 206, 206, 0.2) 100%), #f5f5f5;
-    box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.25), inset 3px 2px 5px rgba(0, 0, 0, 0.3);
+    background: linear-gradient(
+        180deg,
+        rgba(239, 239, 239, 0) 0%,
+        rgba(206, 206, 206, 0.2) 100%
+      ),
+      #f5f5f5;
+    box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.25),
+      inset 3px 2px 5px rgba(0, 0, 0, 0.3);
     border-radius: 4rem;
     cursor: pointer;
   }
 
   &--active {
-    background: linear-gradient(180deg, rgba(239, 239, 239, 0) 0%, rgba(206, 206, 206, 0.2) 100%), #f5f5f5;
-    box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.25), inset 3px 2px 5px rgba(0, 0, 0, 0.3);
+    background: linear-gradient(
+        180deg,
+        rgba(239, 239, 239, 0) 0%,
+        rgba(206, 206, 206, 0.2) 100%
+      ),
+      #f5f5f5;
+    box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.25),
+      inset 3px 2px 5px rgba(0, 0, 0, 0.3);
     border-radius: 4rem;
   }
 }
 
 .btn--search {
-  background: linear-gradient(180deg, rgba(229, 111, 71, 0.8) 0%, #e56f47 100%), #ffffff;
-  border-radius: 30px;
+  border-radius: 100px;
   color: #ffffff;
   font-family: inherit;
-  width: 20rem;
-  padding: 1.5rem;
+  padding: 1.45rem 2rem;
+  background-color: $color__main;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 2.3rem;
 
-  @media only screen and (max-width: $rwd-smallest) {
-    width: 25rem;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  // @media only screen and (max-width: $rwd-smallest) {
+  //   width: 25rem;
+  // }
 
   &:visited {
     color: #ffffff;
   }
 
-  &:active,
+  &:active {
+    background-color: $color__main;
+    box-shadow: 0px 0px 16px #00a8c0;
+  }
   &:hover {
-    color: #ffffff;
-    background: linear-gradient(180deg, rgba(229, 111, 71, 1) 0%, #e56f47 100%), #ffffff;
+    background-color: $color__main--dark10;
+  }
+
+  img {
+    margin-left: 0.65rem;
   }
 }
 
