--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -1,93 +1,34 @@
 @import "../../sass/variable.scss";
 
 .searchBar {
-  background: linear-gradient(180deg, rgba(239, 239, 239, 0) 0%, rgba(206, 206, 206, 0.2) 100%), #ffffff;
-  box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.25), inset 0px -3px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 4rem;
-  width: 100rem;
-  height: 8rem;
   margin: 0 auto;
 
-  @media only screen and (max-width: $rwd-medium) {
-    width: 80rem;
-  }
+  // @media only screen and (max-width: $rwd-medium) {
+  //   width: 80rem;
+  // }
 
-  @media only screen and (max-width: $rwd-small) {
-    width: 50rem;
-    height: auto;
-  }
+  // @media only screen and (max-width: $rwd-small) {
+  //   width: 50rem;
+  //   height: auto;
+  // }
 
   &__form {
-    padding-top: 1.3rem;
-    padding-left: 1.78rem;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 
-    @media only screen and (max-width: $rwd-small) {
-      padding: 3rem 5rem;
-    }
-
-    input {
-      background: linear-gradient(180deg, rgba(239, 239, 239, 0) 0%, rgba(206, 206, 206, 0.2) 100%), #ffffff;
-      box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.25), inset 0px -1px 4px rgba(0, 0, 0, 0.3);
-      border-radius: 30px;
-      margin-right: 1rem;
-      text-align: center;
-      font-size: 1.8rem;
-      width: 40rem;
-      height: 4.6rem;
-      font-family: inherit;
-
-      @media only screen and (max-width: $rwd-medium) {
-        width: 30rem;
-      }
-
-      @media only screen and (max-width: $rwd-small) {
-        margin: 0;
-        margin-bottom: 3rem;
-        flex: 0 1 100%;
-      }
-    }
-
-    select {
-      background: linear-gradient(180deg, rgba(239, 239, 239, 0) 0%, rgba(206, 206, 206, 0.2) 100%), #ffffff;
-      box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.25), inset 0px -1px 4px rgba(0, 0, 0, 0.3);
-      border-radius: 30px;
-      font-size: 1.8rem;
-      font-family: inherit;
-      padding: 0.9rem 1.056rem;
-      margin-right: 1rem;
-      position: relative;
-
-      @media only screen and (max-width: $rwd-small) {
-        margin: 0;
-        margin-bottom: 5rem;
-        flex: 1 1 50%;
-      }
-    }
+    // @media only screen and (max-width: $rwd-small) {
+    //   padding: 3rem 5rem;
+    // }
 
     button {
-      margin-left: auto;
-      margin-right: 1.7rem;
+      // margin-left: auto;
+      // margin-right: 1.7rem;
 
-      @media only screen and (max-width: $rwd-small) {
-        margin: 0;
-        margin-bottom: 1rem;
-      }
+      // @media only screen and (max-width: $rwd-small) {
+      //   margin: 0;
+      //   margin-bottom: 1rem;
+      // }
     }
-  }
-}
-
-.searchBar--homepage {
-  width: 80rem;
-
-  input {
-    width: 30rem;
-  }
-
-  @media only screen and (max-width: $rwd-small) {
-    width: 50rem;
   }
 }
