--- a/src/views/mainPage/mainPage.scss
+++ b/src/views/mainPage/mainPage.scss
@@ -30,12 +30,17 @@
       right: 0;
       z-index: 10000;
       width: 100%;
+      transition: all 0.2s;
+    }
+
+    &--imgs {
+      flex: 0 1 100%;
       background-color: $color__main;
       display: flex;
       align-items: center;
       justify-content: space-between;
       box-shadow: 8px 10px 16px rgba(0, 0, 0, 0.1);
-      transition: all 0.2s;
+      margin-bottom: 2rem;
 
       & > img:first-child {
         &:hover {
@@ -47,15 +52,40 @@
         margin-right: 8rem;
       }
     }
+
+    &--searchBar {
+      flex: 0 1 100%;
+    }
   }
 
-  &__sideBar {
-    // transition: all 0.2s;
-    // flex: 100%;
-    // z-index: 10000;
-    // height: 100vh;
-    // background: #f7f8fa;
-    // box-shadow: 15px 0px 8px rgba(0, 0, 0, 0.1);
+  &__error {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.6;
+    z-index: 10000;
+    color: white;
+
+    div {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    div :first-child {
+      font-family: "Montserrat", sans-serif;
+      font-size: 20rem;
+      margin-bottom: 5rem;
+    }
+
+    div :last-child {
+      text-align: center;
+      font-size: 5.2rem;
+    }
   }
 }
 
@@ -67,4 +97,8 @@
 
 .header--active {
   width: calc(100vw - 25%);
+}
+
+.error--hidden {
+  z-index: -10;
 }
