--- a/src/components/form/select/select.scss
+++ b/src/components/form/select/select.scss
@@ -8,6 +8,7 @@
     border: 1px solid #dcdee0;
     box-sizing: border-box;
     border-radius: 100px;
+    margin-left: 1rem;
     padding: 1.4rem 2rem 1.5rem 2rem;
 
     font-style: normal;
