--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -44,7 +44,7 @@ html {
 body {
   width: 100%;
   font-family: "Noto Sans TC", sans-serif;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .img--hidden {
