--- a/src/components/btn/btn.scss
+++ b/src/components/btn/btn.scss
@@ -2,36 +2,30 @@
 @import "../../sass/variable.scss";
 
 .btn {
-  display: block;
-  font-size: 1.8rem;
-  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6rem;
+  line-height: 2.3rem;
+  background-color: $color__main;
+  font-family: inherit;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 700;
 
-  text-align: center;
-  /* 白色 */
-  background: linear-gradient(
-      180deg,
-      rgba(239, 239, 239, 0) 0%,
-      rgba(206, 206, 206, 0.2) 100%
-    ),
-    #ffffff;
+  padding: 1.45rem 2rem;
 
-  /* 白btn */
-  box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.25),
-    inset 0px -1px 4px rgba(0, 0, 0, 0.3);
-  border-radius: 40px;
+  &:visited {
+    color: #ffffff;
+  }
 
-  &:active,
+  &:active {
+    background-color: $color__main;
+    box-shadow: 0px 0px 16px $color__main;
+  }
   &:hover {
-    background: linear-gradient(
-        180deg,
-        rgba(239, 239, 239, 0) 0%,
-        rgba(206, 206, 206, 0.2) 100%
-      ),
-      #f5f5f5;
-    box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.25),
-      inset 3px 2px 5px rgba(0, 0, 0, 0.3);
-    border-radius: 4rem;
     cursor: pointer;
+    background-color: $color__main--dark10;
   }
 
   &--active {
@@ -49,47 +43,21 @@
 
 .btn--search {
   border-radius: 100px;
-  color: #ffffff;
-  font-family: inherit;
-  padding: 1.45rem 2rem;
-  background-color: $color__main;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 1.6rem;
-  line-height: 2.3rem;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-right: 1rem;
+  // flex: 1;
 
   // @media only screen and (max-width: $rwd-smallest) {
   //   width: 25rem;
   // }
-
-  &:visited {
-    color: #ffffff;
-  }
-
-  &:active {
-    background-color: $color__main;
-    box-shadow: 0px 0px 16px #00a8c0;
-  }
-  &:hover {
-    background-color: $color__main--dark10;
-  }
 
   img {
     margin-left: 0.65rem;
   }
 }
 
-.btn--nav {
-  padding: 1rem 2rem;
-  width: 12rem;
-
-  @media only screen and (max-width: $rwd-smallest) {
-    width: 100%;
-  }
+.btn--location {
+  margin-right: 1rem;
+  border-radius: 40rem;
 }
 
 .btn--detailCard {
@@ -99,14 +67,6 @@
 }
 
 .btn--pageBar {
-  width: 5rem;
-  height: 5rem;
-  margin: 0 1rem;
-  padding: 1.5rem;
-}
-
-.btn--red {
-  color: white;
-  padding: 0rem;
-  background-color: orangered;
+  margin-right: 1.2rem;
+  border-radius: 40rem;
 }
