--- a/src/components/card/listSmallCard/listSmallCard.scss
+++ b/src/components/card/listSmallCard/listSmallCard.scss
@@ -1,92 +1,97 @@
 .listSmallCard {
-  background: linear-gradient(180deg, rgba(239, 239, 239, 0) 0%, rgba(206, 206, 206, 0.2) 100%), #ffffff;
-  box-shadow: 8px 48px 35px -13px rgba(0, 0, 0, 0.25), inset -4px -4px 3px -2px rgba(0, 0, 0, 0.25);
-  border-radius: 5rem;
-  //   border: 1px solid black;
-  width: 35.4rem;
-  height: 35.4rem;
+  background: #ffffff;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.08);
+  border-radius: 2rem;
+  width: 22.5rem;
+  height: 10rem;
   padding: 2rem;
+  margin: 1.2rem;
   transition: all 0.5s;
 
   display: flex;
   align-items: center;
   flex-wrap: wrap;
 
-  &__img-container {
-    flex: 0 1 100%;
-    width: 30.6rem;
-    height: 20.8rem;
-    border-radius: 4rem;
-    overflow: hidden;
-
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-    }
-  }
-
   &__title {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 
-    color: #291109;
+    color: #323233;
     flex: 0 1 100%;
-    margin-top: 0.5rem;
+
     text-align: start;
-    font-weight: 500;
-    line-height: 3.34rem;
-    font-size: 2.4rem;
-    font-family: inherit;
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 2.3rem;
+    font-family: "Noto Sans TC";
   }
 
-  &__icon {
-    margin-top: 0.2rem;
-    flex: 0 1 100%;
-
-    display: flex;
-    align-items: center;
-    img {
-    }
-
-    span {
-      font-family: inherit;
-      font-size: 1.5rem;
-      line-height: 2.1rem;
-      color: #696969;
-    }
-  }
-
-  &__more {
+  &__address {
     flex: 0 1 100%;
     font-size: 1.8rem;
     line-height: 2.5rem;
     text-align: center;
     transition: all 0.5s;
     color: #e56f47;
+  }
+  &__open {
+    flex: 0 1 100%;
+    font-family: "Noto Sans TC";
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.3rem;
+    color: #323233;
+  }
+
+  &__phone {
+    // display: block;
     position: relative;
+
+    &:hover::after {
+      width: 100%;
+    }
 
     &::after {
       content: "";
       position: absolute;
       display: block;
       transition: all 0.2s;
-      left: 50%;
-      transform: translateX(-50%);
+      // left: 38%;
+      // transform: translateX(-50%);
       height: 2px;
-      background-color: #e56f47;
-      margin-top: 0.5rem;
+      background-color: #00a8c0;
       width: 0%;
+    }
+
+    &:link {
+      color: #00a8c0;
+      font-family: "Montserrat";
+      font-size: 1.6rem;
+      line-height: 2rem;
+      font-weight: 700;
+    }
+
+    &:visited {
     }
   }
 
   &:hover {
-    transform: scale(1.1);
+    background: #ffffff;
+    box-shadow: 0px 0px 16px #00a8c0;
     cursor: pointer;
   }
 
   &:hover &__more::after {
     width: 25%;
+  }
+}
+
+.listSmallCard--active {
+  background: #ffffff;
+  box-shadow: 0px 0px 16px #00a8c0;
+  p,
+  a {
+    color: #00a8c0;
   }
 }
