--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,4 +2,4 @@
 @import "./base.scss";
 @import "./variable.scss";
 
-@import "./feature/stationDetailCard.scss";
+@import "./feature/detailCard.scss";
