--- a/src/sass/variable.scss
+++ b/src/sass/variable.scss
@@ -11,6 +11,7 @@ $color__2nd--light20: #d9ef0833;
 $color__2nd--dark20: #c8dc07;
 
 $color--wite: #ffffff;
+$color--grey-L: #c8c9cc;
 
 $rwd-largest: 1500px;
 $rwd-large: 1200px;
