--- a/src/components/card/listSmallCard/listSmallCard.scss
+++ b/src/components/card/listSmallCard/listSmallCard.scss
@@ -5,7 +5,8 @@
   width: 22.5rem;
   height: 10rem;
   padding: 2rem;
-  margin: 1.2rem;
+
+  margin: 0 1.2rem;
   transition: all 0.5s;
 
   display: flex;
@@ -82,16 +83,11 @@
     cursor: pointer;
   }
 
-  &:hover &__more::after {
-    width: 25%;
+  &:hover * {
+    color: #00a8c0;
   }
 }
 
 .listSmallCard--active {
-  background: #ffffff;
   box-shadow: 0px 0px 16px #00a8c0;
-  p,
-  a {
-    color: #00a8c0;
-  }
 }
