--- a/src/sass/feature/detailCard.scss
+++ b/src/sass/feature/detailCard.scss
@@ -1,7 +1,22 @@
-.stationDetailCard {
+.detailCard {
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 1rem;
+
+  &__img {
+    width: 100%;
+    height: 12rem;
+    justify-self: center;
+    border-radius: 10px;
+    overflow: hidden;
+
+    img {
+      object-fit: cover;
+      object-position: center;
+      width: 100%;
+      height: 100%;
+    }
+  }
 
   &__title {
     font-family: "Noto Sans TC";
@@ -47,10 +62,5 @@
       font-size: 1.2rem;
       line-height: 1.7rem;
     }
-  }
-
-  button {
-    margin-top: 1rem;
-    border-radius: 10rem;
   }
 }
