--- a/src/views/mainPage/mainPage.scss
+++ b/src/views/mainPage/mainPage.scss
@@ -34,12 +34,17 @@
       margin-bottom: 2rem;
 
       & > img:first-child {
+        width: 8rem;
+        height: 8rem;
+
         &:hover {
           cursor: pointer;
         }
       }
 
       & > img:last-child {
+        width: 16.2rem;
+        height: 4.8rem;
         margin-right: 8rem;
       }
     }
@@ -90,6 +95,14 @@
 
 .header--active {
   width: calc(100vw - 25%);
+
+  @media only screen and (max-width: $rwd-medium) {
+    width: calc(100vw - 40%);
+  }
+
+  @media only screen and (max-width: $rwd-smallest) {
+    width: calc(100vw - 50%);
+  }
 }
 
 .error--hidden {
