--- a/src/components/btn/btn.scss
+++ b/src/components/btn/btn.scss
@@ -12,6 +12,8 @@
   color: #ffffff;
   font-style: normal;
   font-weight: 700;
+  border-radius: 100px;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.16);
 
   padding: 1.45rem 2rem;
 
@@ -42,7 +44,6 @@
 }
 
 .btn--search {
-  border-radius: 100px;
   margin-right: 1rem;
   // flex: 1;
 
