--- a/src/components/card/sideBarListCard/sideBarListCard.scss
+++ b/src/components/card/sideBarListCard/sideBarListCard.scss
@@ -1,6 +1,7 @@
 @import "../../../sass/variable.scss";
 
 .sideBarListCard {
+  user-select: none;
   background-image: linear-gradient(
       to right bottom,
       rgba($color--grey-L, 1),
@@ -10,9 +11,10 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  transition: all 0.3s;
 
   margin: 1rem 0;
-  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 8px 18px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
   padding: 0 2rem;
   flex: 0 1 90%;
@@ -21,6 +23,17 @@
   grid-template-columns: 1fr 9fr;
   grid-column-gap: 0.8rem;
   grid-row-gap: 1.2rem;
+
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.01);
+    box-shadow: 0px 0px 16px #00a8c0;
+  }
+
+  &:active {
+    transform: translateY(1%);
+    box-shadow: 0px 0px 16px #00a8c0;
+  }
 
   & > div {
     padding: 0.8rem 0;
