--- a/src/components/form/input/input.scss
+++ b/src/components/form/input/input.scss
@@ -1,15 +1,24 @@
+@import "../../../sass/variable.scss";
+
 .input {
   background: #ffffff;
   border: 1px solid #dcdee0;
   border-radius: 10rem;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.16);
 
   &__mainSearchBar {
     // width: 97rem;
+    font-family: inherit;
     flex: 1;
     height: 5.2rem;
     margin: 0 1.2rem;
     font-size: 1.6rem;
     line-height: 2.3rem;
     padding: 1.5rem 2rem;
+
+    @media only screen and (max-width: $rwd-medium) {
+      margin-top: 2rem;
+      flex: 0 1 100%;
+    }
   }
 }
