--- a/src/components/form/select/select.scss
+++ b/src/components/form/select/select.scss
@@ -1,19 +1,32 @@
+@import "../../../sass/variable.scss";
+
 .select {
+  background: #ffffff;
+  border: 1px solid #dcdee0;
+  box-sizing: border-box;
+  border-radius: 100px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 2.3rem;
+  font-family: inherit;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.16);
+  // width: 100%;
+
   &:hover {
     cursor: pointer;
   }
 
+  @media only screen and (max-width: $rwd-medium) {
+    padding: 1rem;
+  }
+
   &__mainSearchBar {
-    background: #ffffff;
-    border: 1px solid #dcdee0;
-    box-sizing: border-box;
-    border-radius: 100px;
     margin-left: 1rem;
     padding: 1.4rem 2rem 1.5rem 2rem;
 
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 2.3rem;
+    @media only screen and (max-width: $rwd-small) {
+      flex: 0 1 100%;
+    }
   }
 }
