--- a/src/views/mainPage/sideBar/sideBar.scss
+++ b/src/views/mainPage/sideBar/sideBar.scss
@@ -1,3 +1,4 @@
+@import "../../../sass/variable.scss";
 .mainPage__sideBar {
   position: absolute;
   top: 0;
@@ -5,13 +6,78 @@
   width: 25%;
   overflow-y: auto;
 
+  &::-webkit-scrollbar {
+    margin: 0;
+    background-color: rgba(lightgray, 0.5);
+    width: 1.5rem;
+    height: 1.5rem;
+
+    // background-clip: padding-box;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    /*滾動條裡面小方塊*/
+    // border-radius: 5px;
+    // box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.5);
+  }
+
   transition: all 0.2s;
   z-index: 10000;
   height: 100vh;
-  background: #f7f8fa;
+  background-image: linear-gradient(to top, #209cff 0%, #68e0cf 100%);
   box-shadow: 15px 0px 8px rgba(0, 0, 0, 0.1);
 
+  @media only screen and (max-width: $rwd-medium) {
+    width: 40%;
+  }
+
+  @media only screen and (max-width: $rwd-smallest) {
+    width: 50%;
+  }
+
   &-header {
+    margin-bottom: 2rem;
+
+    form {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+
+      & > div {
+        flex: 0 1 50%;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 1.2rem;
+
+        @media only screen and (max-width: $rwd-large) {
+          flex: 0 1 100%;
+        }
+        * {
+          flex: 1 1 100%;
+        }
+
+        label {
+          font-size: 1.4rem;
+          line-height: 1.7rem;
+          margin-bottom: 1rem;
+        }
+
+        select {
+          padding: 1rem;
+          height: 4.4rem;
+
+          @media only screen and (max-width: $rwd-medium) {
+            height: auto;
+          }
+        }
+      }
+
+      button {
+        margin-top: 1rem;
+        flex: 0 1 80%;
+      }
+    }
   }
 
   &-list {
