--- a/src/components/btn/btn.scss
+++ b/src/components/btn/btn.scss
@@ -14,8 +14,7 @@
   font-weight: 700;
   border-radius: 100px;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.16);
-
-  padding: 1.45rem 2rem;
+  padding: 1rem;
 
   &:visited {
     color: #ffffff;
@@ -45,6 +44,7 @@
 
 .btn--search {
   margin-right: 1rem;
+  padding: 1.45rem 2rem;
   // flex: 1;
 
   // @media only screen and (max-width: $rwd-smallest) {
