--- a/src/components/card/listSmallCard/listSmallCard.scss
+++ b/src/components/card/listSmallCard/listSmallCard.scss
@@ -2,14 +2,15 @@
   background: #ffffff;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.08);
   border-radius: 2rem;
-  width: 22.5rem;
+  // width: 22.5rem;
   height: 10rem;
-  padding: 2rem;
+  padding: 1rem;
 
   margin: 0 1.2rem;
   transition: all 0.5s;
 
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 
@@ -21,7 +22,7 @@
     color: #323233;
     flex: 0 1 100%;
 
-    text-align: start;
+    text-align: center;
     font-weight: 700;
     font-size: 1.6rem;
     line-height: 2.3rem;
