--- a/src/components/form/select/select.scss
+++ b/src/components/form/select/select.scss
@@ -11,6 +11,9 @@
   line-height: 2.3rem;
   font-family: inherit;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.16);
+  padding: 1.4rem 2rem 1.5rem 2rem;
+  margin: 1rem 1.2rem;
+  // flex: 1;
   // width: 100%;
 
   &:hover {
@@ -23,7 +26,7 @@
 
   &__mainSearchBar {
     margin-left: 1rem;
-    padding: 1.4rem 2rem 1.5rem 2rem;
+    // padding: 1.4rem 2rem 1.5rem 2rem;
 
     @media only screen and (max-width: $rwd-small) {
       flex: 0 1 100%;
